// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea.component.js renders with id prop 1`] = `
"<div class=\\"sc-AykKH tctSj row sc-AykKJ duMRHg\\"><div class=\\"sc-fzXfLO hzGlg label\\"><div cols=\\"12\\" class=\\"sc-AykKI evPkqg 
        sc-AykKK gUjXDj
      \\"><label for=\\"blah\\" class=\\"sc-fzXfLP fuIufG\\">test</label></div></div></div><div class=\\"sc-AykKH tctSj row sc-fzXfLU gENaCA\\"><div cols=\\"10\\" class=\\"sc-AykKI emtNqC 
        sc-fzXfLV hMHPxM
      \\"><div class=\\"sc-fzXfMv eUXFYH manor-textarea-wrapper    \\"><textarea id=\\"blah\\" name=\\"\\" placeholder=\\"\\" wrap=\\"soft\\" maxlength=\\"\\" aria-describedby=\\"blah-optional-indicator   \\" class=\\"sc-fzXfMw joHDyC\\"></textarea><div class=\\"sc-fzXfLR imMUFU\\"><div class=\\"sc-AykKD ieCbYh\\">The test field is optional</div><p class=\\"sc-fzXfLQ iQyYPH\\">Optional</p></div></div></div></div>"
`;

exports[`Textarea.component.js renders with props 1`] = `
"<div class=\\"sc-AykKH tctSj row sc-AykKJ duMRHg\\"><div class=\\"sc-fzXfLO hzGlg label\\"><div cols=\\"12\\" class=\\"sc-AykKI evPkqg 
        sc-AykKK gUjXDj
      \\"><label for=\\"textarea-id\\" class=\\"sc-fzXfLP fuIufG\\">textarea-label</label></div></div></div><div class=\\"sc-AykKH tctSj row sc-fzXfLU gENaCA\\"><div cols=\\"10\\" class=\\"sc-AykKI emtNqC 
        sc-fzXfLV hMHPxM
      \\"><div class=\\"sc-fzXfMv eUXFYH manor-textarea-wrapper    \\"><textarea id=\\"textarea-id\\" name=\\"textarea-id\\" placeholder=\\"textarea-placeholder\\" wrap=\\"soft\\" maxlength=\\"\\" aria-describedby=\\"textarea-id-optional-indicator   \\" class=\\"sc-fzXfMw joHDyC\\"></textarea><div class=\\"sc-fzXfLR imMUFU\\"><div class=\\"sc-AykKD ieCbYh\\">The textarea-label field is optional</div><p class=\\"sc-fzXfLQ iQyYPH\\">Optional</p></div></div></div></div>"
`;
